# xwiimote-bindings

./: .gitignore  COPYING  LICENSE  Makefile.am  README  binding_api.txt  configure.ac
examples/perl/: xwiimote_test.pl
examples/python/: example.py  xwiimote_test.py
perl/: Makefile.PL.in
python/: setup.py.in
src/: xwiimote.i
